--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,11 +8,13 @@ jobs:
        run: echo "A demo build!"
   test-app:
     runs-on: ubuntu-latest
+    needs: build-app
     steps:
       - name: Test step
         run: echo "Test phase running"
   deploy-app:
      runs-on: ubuntu-latest
+     needs: test-app
      steps:
        - name: Deploy phase
          run: echo "Deployment phase running"
